--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "release": "bumpp && npm publish"
   },
   "dependencies": {
+    "@nuxt/devtools-kit": "^1.0.6",
     "@nuxt/kit": "^3.8.2",
-    "@types/ws": "^8.5.10",
     "birpc": "^0.2.14",
-    "consola": "^3.2.3",
     "fast-glob": "^3.3.2",
-    "flatted": "^3.2.9",
     "pathe": "^1.1.1",
     "perfect-debounce": "^1.0.0",
     "scule": "^1.1.1",
@@ -62,7 +60,6 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.8.2",
-    "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
   "resolutions": {
