--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "@nuxt/devtools-kit": "^1.0.6",
     "@nuxt/kit": "^3.8.2",
     "birpc": "^0.2.14",
-    "fast-glob": "^3.3.2",
     "pathe": "^1.1.1",
     "perfect-debounce": "^1.0.0",
     "scule": "^1.1.1",
     "sirv": "^2.0.3",
     "svgo": "^3.1.0",
+    "tinyglobby": "^0.2.10",
     "vite-svg-loader": "^5.1.0"
   },
   "devDependencies": {
