--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-svgo-loader",
   "type": "module",
   "version": "0.5.0",
-  "packageManager": "pnpm@10.6.1",
+  "packageManager": "pnpm@10.13.1",
   "description": "Nuxt module to load SVG files as Vue components, using SVGO for optimization.",
   "author": {
     "name": "Alex Liu <dsa1314@gmail.com>",
@@ -26,21 +26,21 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/types.d.ts",
+      "types": "./dist/types.d.mts",
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
     }
   },
   "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "types": "./dist/types.d.mts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "stub": "nuxt-build-module build --stub",
+    "stub": "nuxt-module-build build --stub",
     "build": "pnpm dev:prepare && pnpm build:module && pnpm build:client",
     "build:client": "nuxi generate client",
-    "build:module": "nuxt-build-module build",
+    "build:module": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxi prepare playground",
     "lint": "eslint .",
@@ -49,28 +49,28 @@
     "release": "bumpp && npm publish"
   },
   "dependencies": {
-    "@nuxt/devtools-kit": "^2.2.1",
-    "@nuxt/kit": "^3.16.0",
-    "birpc": "^2.2.0",
+    "@nuxt/devtools-kit": "^2.6.2",
+    "birpc": "^2.5.0",
     "pathe": "^2.0.3",
     "perfect-debounce": "^1.0.0",
     "scule": "^1.3.0",
     "sirv": "^3.0.1",
     "svgo": "^3.3.2",
-    "tinyglobby": "^0.2.12",
+    "tinyglobby": "^0.2.14",
     "vite-svg-loader": "^5.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.8.1",
-    "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.16.0",
-    "@typescript-eslint/eslint-plugin": "^8.26.0",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.22.0",
+    "@antfu/eslint-config": "^4.18.0",
+    "@nuxt/kit": "^4.0.1",
+    "@nuxt/module-builder": "^1.0.1",
+    "@nuxt/schema": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.31.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
-    "nuxt": "^3.16.0",
-    "typescript": "^5.8.2"
+    "lint-staged": "^16.1.2",
+    "nuxt": "^4.0.1",
+    "typescript": "^5.8.3"
   },
   "resolutions": {
     "nuxt-svgo-loader": "link:."
