--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "bumpp": "^10.2.0",
     "eslint": "^9.31.0",
     "husky": "^9.1.7",
+    "knitwork": "^1.2.0",
     "lint-staged": "^16.1.2",
     "nuxt": "^4.0.1",
     "oxc-walker": "^0.4.0",
