feat: add virtual `<SvgoIcon>` component resolution (#6)
* feat: add automatic `<SvgoIcon>` component resolution

* feat: automatically scan and type `<SvgoIcon>` type

* feat: support strategy prop for `<SvgoIcon>`

* refactor: simplify code

* chore: update playground code

* feat: add validation and default for `strategy` prop

* chore: add source comment for `isVue` function

* refactor: simplify `srcDir` initialization

* docs: update readme

* refactor: simplify component name generation

* refactor: adjust `scan` code

* fix: add missing `knitwork`

* feat: support for specifying `namespaces`

--- a/package.json
+++ b/package.json
@@ -68,9 +68,13 @@
     "bumpp": "^10.2.0",
     "eslint": "^9.31.0",
     "husky": "^9.1.7",
+    "knitwork": "^1.2.0",
     "lint-staged": "^16.1.2",
     "nuxt": "^4.0.1",
-    "typescript": "^5.8.3"
+    "oxc-walker": "^0.4.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "ultrahtml": "^1.6.0"
   },
   "resolutions": {
     "nuxt-svgo-loader": "link:."
