--- a/package.json
+++ b/package.json
@@ -51,12 +51,14 @@
   "dependencies": {
     "@nuxt/devtools-kit": "^2.6.2",
     "birpc": "^2.5.0",
+    "oxc-walker": "^0.4.0",
     "pathe": "^2.0.3",
     "perfect-debounce": "^1.0.0",
     "scule": "^1.3.0",
     "sirv": "^3.0.1",
     "svgo": "^3.3.2",
     "tinyglobby": "^0.2.14",
+    "ultrahtml": "^1.6.0",
     "vite-svg-loader": "^5.1.0"
   },
   "devDependencies": {
@@ -71,10 +73,8 @@
     "knitwork": "^1.2.0",
     "lint-staged": "^16.1.2",
     "nuxt": "^4.0.1",
-    "oxc-walker": "^0.4.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3",
-    "ultrahtml": "^1.6.0"
+    "typescript": "^5.8.3"
   },
   "resolutions": {
     "nuxt-svgo-loader": "link:."
